Anonymous | Login | 2019-02-24 08:06 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0022330 | Community | [OCCT] OCCT:Visualization | public | 2011-03-17 16:10 | 2012-03-29 17:26 | ||||
Reporter | szy | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | All | OS Version | ||||||
Product Version | |||||||||
Target Version | [OCCT] 6.5.2 | Fixed in Version | [OCCT] 6.5.2 | ||||||
Summary | 0022330: Compilation errors from 'clang' on OS X | ||||||||
Description | Post from the forum http://www.opencascade.org/org/forum/thread_20205/. [^] Investigated and confirmed by MSV that it is the real bug. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required. | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0017855) bugmaster (administrator) 2011-07-29 13:47 |
Anton, SVN branch http://svn/svn/occt/branches/OCC22330 [^] has been created and ready to be reviewed |
(0017860) apl (developer) 2011-07-29 16:00 |
Tabulations in modified lines in Visual3d_TransientManager.cxx replaced with space characters. Already applied to SVN branch. |
(0017861) apl (developer) 2011-07-29 16:02 |
Dear bugmaster, SVN branch http://svn/svn/occt/branches/OCC22330 [^] has been reviewed and all remarks were eliminated, branch is ready for testing. |
(0017917) miv (tester) 2011-08-05 12:37 edited on: 2011-11-24 17:09 |
Anton, Should we have additional test script for this bug? If yes, provide it.. -- Regards, Mike |
(0017918) apl (developer) 2011-08-05 12:50 |
Dear Mikhail, From the post message and review it seems to be only "compilation errors", it's impossible to write any useful test script. |
(0017997) miv (tester) 2011-08-18 10:05 edited on: 2011-11-24 17:09 |
Dear Bugmaster, This fix tested. Regression was not found. -- regards, Mike |
(0017998) bugmaster (administrator) 2011-08-18 11:37 |
Fix has been integrated to occt repository Date: 2011-08-18 11:36:01 +0400 (Thu, 18 Aug 2011) New Revision: 8858 Modified: trunk/src/Visual3d/Visual3d_TransientManager.cxx |
![]() |
|||
occt: master 1057600a
Timestamp: 2011-08-18 07:36:01 Author: VSV and APL Committer: bugmaster [ Details ] [ Diff ] |
0022330: Compilation errors from 'clang' on OS X | ||
mod - src/Visual3d/Visual3d_TransientManager.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2011-04-06 18:36 | bugmaster | Status | closed => assigned |
2011-04-06 18:36 | bugmaster | Resolution | suspended => @0@ |
2011-04-06 19:08 | bugmaster | Assigned To | bugmaster => szy |
2011-04-07 16:39 | szy | Assigned To | szy => vsv |
2011-04-21 14:32 | vsv | Status | assigned => resolved |
2011-07-29 13:47 | bugmaster | Note Added: 0017855 | |
2011-07-29 13:47 | bugmaster | Assigned To | vsv => apl |
2011-07-29 13:47 | bugmaster | Status | resolved => assigned |
2011-07-29 13:47 | bugmaster | Status | assigned => resolved |
2011-07-29 13:47 | bugmaster | Fixed in Version | EMPTY => |
2011-07-29 13:47 | bugmaster | Description Updated | View Revisions |
2011-07-29 16:00 | apl | Note Added: 0017860 | |
2011-07-29 16:02 | apl | Note Added: 0017861 | |
2011-07-29 16:04 | apl | Status | resolved => reviewed |
2011-08-02 11:24 | bugmaster | Category | OCCT:VIZ => OCCT:Visualization |
2011-08-03 12:52 | bugmaster | Target Version | => 6.5.2 |
2011-08-05 12:37 | miv | Note Added: 0017917 | |
2011-08-05 12:50 | apl | Note Added: 0017918 | |
2011-08-18 09:59 | miv | Test case number | => Not required. |
2011-08-18 10:05 | miv | Note Added: 0017997 | |
2011-08-18 10:06 | miv | Note Edited: 0017997 | View Revisions |
2011-08-18 10:06 | miv | Status | reviewed => tested |
2011-08-18 10:06 | miv | Assigned To | apl => bugmaster |
2011-08-18 11:37 | bugmaster | Note Added: 0017998 | |
2011-08-18 11:37 | bugmaster | Status | tested => verified |
2011-08-18 11:37 | bugmaster | Assigned To | bugmaster => vsv |
2011-11-24 17:09 | szy | Note Edited: 0017917 | View Revisions |
2011-11-24 17:09 | szy | Note Edited: 0017997 | View Revisions |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 1057600a |
Copyright © 2000 - 2019 MantisBT Team |