0022330: Compilation errors from 'clang' on OS X